spring rev initial
removing old foundation files
renaming theme to 'gazette'
setting up bootstrap and sass
add featured imge support to thumbnails.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: commonplace
+Theme Name: Gazette
 Theme URI: https://github.com/common-place-dot-org/commonplace
 Author: Andrew Bacon & Sam Menza
 Author URI: andrewbacon.net & sammenza.com
