--- a/sass/gazette.scss
+++ b/sass/gazette.scss
@@ -5,3 +5,5 @@
 // Import the Bootstrap SASS
 @import "../vendor/bootstrap-sass-3.3.2/assets/stylesheets/bootstrap.scss";
 
+// Import the main Gazette SASS
+@import "article.scss";
