--- a/css/gazette.css
+++ b/css/gazette.css
@@ -5050,7 +5050,7 @@ tbody.collapse.in {
   display: inline-block;
 }
 .breadcrumb > li + li:before {
-  content: /\00a0;
+  content: "/\00a0";
   padding: 0 5px;
   color: #cccccc;
 }
