--- a/sass/article.scss
+++ b/sass/article.scss
@@ -7,72 +7,129 @@
 
 */
 
+
+
+#main {
+	padding: 50px;
+	background-color: white;
+	border-radius:$border-radius-base;
+}
+.article {
+}
+
 .single-article {
-	figure {
+
+	
+	
+	.breadcrumb {
 		
-		&.alignright {
-			height:0;
-			
-			.fig-wrap {
-				
-				position:relative;
-				left:100%;
-				margin-left:$grid-gutter-width;
-				
-				img {
-				
-				}
-				figcaption {
-					padding-top:.5em;
-				}	
-			}
+	}
+	
+
+	.entry-content {
+
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6,
+		p,
+		pre,
+		ul,
+		ol,
+		figure {
+			float: left;
+			width:47%;
+			clear: left;
 		}
-		&.alignnone {
-			height:0;
-			
-			.fig-wrap {
-				
-				position:relative;
-				left:100%;
-				margin-left:$grid-gutter-width;
-				
-				img {
-				
-				}
-				figcaption {
-					padding-top:.5em;
-				}	
+
+		figure.alignone,
+		figure.alignright,
+		blockquote {
+			float: right;
+			width: 47%;
+			margin:0;
+			clear:right;
+			margin-bottom:6%;
+			p {
+				float:none;
+				width:auto;	
 			}
+			
+		}
+
+		blockquote.center {
+			float: left;
+			width: 90%;
+			text-align: center;
+
+			margin: 6% auto;
+		}
+
+		
+		figure {			
+			figcaption {
+				padding:.5em 0;
+			}	
 		}
 	}
 	
+	/*
 	blockquote {
 		padding:0;
-		margin:0;
-		
+		margin:0;		
 		height:0;
+		border:none;
+
 		* {
 			position:relative;
 			left:100%;
 			margin-left:$grid-gutter-width;	
 		}
+
+		&.center {
+
+			width:150%;
+			background-color: yellow;
+			position: relative;
+			left: 25%;
+			margin: 2em 0;
+			text-align: center;
+
+			height: inherit;
+			* {
+				left:0;
+				margin-left: 0;
+			}
+		}
 		
 	}
-	
+	*/
 	.gallery {
+		float: left;
+		clear: both;
 		.gallery-item {
 			float:left;
 			
 			.gallery-item-wrap {
 				
 				padding: $grid-gutter-width/2;
+
+				.gallery-icon {
+					img {
+						width:100%;
+						height:auto;
+					}
+				}
+
+				.gallery-caption {
+					padding-top:.5em;
+				}
 			
 			}
 			
-			img {
-				width:100%;
-				height:auto;
-			}
+
 		
 			&:first-child {
 				.gallery-item-wrap {
