--- a/css/gazette.css
+++ b/css/gazette.css
@@ -7383,3 +7383,45 @@ hr {
 .single-article .gallery .gallery-item:last-child .gallery-item-wrap {
   padding-right: 0;
 }
+
+.search-results #main .bsearchform {
+  display: none;
+}
+.search-results #main .page-header {
+  margin: 0;
+  padding: 0;
+}
+.search-results #main .page-header .page-title {
+  font: 16px sans-serif;
+  color: #6f6f6f;
+  font-weight: normal;
+  margin: 0;
+}
+.search-results #main .page-header .page-title span {
+  font-weight: bold;
+  color: black;
+}
+.search-results #main h2 {
+  font-size: 1.3em;
+  font-family: sans-serif;
+  font-weight: normal;
+}
+.search-results #main h2 + p {
+  display: none;
+}
+.search-results #main p {
+  color: #6f6f6f;
+}
+.search-results #main .bsearch_footer {
+  font-size: 20px;
+  border: 1px solid #ccc;
+  border-width: 1px 0;
+  margin: 30px 0 10px;
+  padding: 10px 0;
+}
+.search-results #main .bsearch_footer b, .search-results #main .bsearch_footer a {
+  margin-right: 1em;
+}
+.search-results #main .bsearch_nav {
+  margin: 10px 0 30px;
+}
