--- a/sass/gazette.scss
+++ b/sass/gazette.scss
@@ -170,3 +170,64 @@ hr {
 }
 @import "_article.scss";
 
+
+.search-results {
+	
+	
+	
+	#main {
+		
+		.bsearchform {
+			display:none;
+		}
+		
+		.page-header {
+			
+			margin:0; 
+			padding:0;
+			
+			
+			.page-title {
+				font:16px sans-serif;
+				color:#6f6f6f;
+				font-weight:normal;
+				margin:0;
+				
+				span {
+					font-weight:bold;
+					color:black;
+				}
+			}
+		}
+		
+		h2 {
+			font-size: 1.3em;
+			font-family: sans-serif;
+			font-weight: normal;
+			
+			&+p {
+				display:none;	
+			}
+		}
+		p {
+			color:#6f6f6f;	
+		}
+		.bsearch_footer {
+			font-size: 20px;
+			border:1px solid #ccc;
+			border-width:1px 0;
+			margin:30px 0 10px;	
+			padding:10px 0;
+			
+			b, a {
+				margin-right:1em;
+			}
+			
+		}
+		.bsearch_nav {
+			margin:10px 0 30px;	
+		}
+		
+	}
+}
+
