--- a/sass/gazette.scss
+++ b/sass/gazette.scss
@@ -21,7 +21,8 @@ body {
 	.site-title{
 	}
 	.bsearchform {
-		margin-top:40px;	
+		margin-top:40px;
+		text-align:right;
 	}
 	#site-navigation {	
 	}
