Fixing image widths in mobile.

--- a/css/gazette.css
+++ b/css/gazette.css
@@ -7194,6 +7194,11 @@ body {
   color: #800924;
 }
 
+@media (max-width: 720px) {
+  .page-template-home .article-img img {
+    width: 100%;
+  }
+}
 #columns-nav a {
   font-style: italic;
 }
