fixing many issues.

--- a/sass/_override-bootstrap-variables.scss
+++ b/sass/_override-bootstrap-variables.scss
@@ -1,6 +1,6 @@
 /* Scss Document */
 
-
+$brand-primary: 			#800924;
 
 $font-size-base:          14px;
 $font-size-large:         ceil(($font-size-base * 1.25)); // ~18px
